--- a/config/sites/default/core.entity_form_display.node.page.default.yml
+++ b/config/sites/default/core.entity_form_display.node.page.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.page.field_basic_sidebar
     - field.field.node.page.field_body_components
     - field.field.node.page.field_metatags
+    - field.field.node.page.field_page_teaser
     - field.field.node.page.field_reference_access_control
     - field.field.node.page.field_text
     - node.type.page
@@ -26,6 +27,7 @@ third_party_settings:
       children:
         - group_description
         - group_header
+        - group_card_data
         - group_sidebar_and_navigation
         - group_components
       parent_name: ''
@@ -41,7 +43,7 @@ third_party_settings:
       children:
         - field_basic_components
       parent_name: group_ver
-      weight: 23
+      weight: 24
       format_type: tab
       region: content
       format_settings:
@@ -56,7 +58,7 @@ third_party_settings:
         - field_basic_enable_nav
         - field_basic_sidebar
       parent_name: group_ver
-      weight: 22
+      weight: 23
       format_type: tab
       region: content
       format_settings:
@@ -96,6 +98,20 @@ third_party_settings:
         formatter: closed
         required_fields: true
       label: Header
+    group_card_data:
+      children:
+        - field_page_teaser
+      parent_name: group_ver
+      weight: 22
+      format_type: tab
+      region: content
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+        required_fields: true
+      label: 'Card Data'
 _core:
   default_config_hash: sb0qCkzU_8mNq29NehYAU8jCBXWPLeX0UN8sYFVGVcw
 id: node.page.default
@@ -105,7 +121,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 5
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -165,13 +181,21 @@ content:
     third_party_settings: {  }
     region: content
   field_metatags:
-    weight: 13
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: metatag_firehose
     region: content
+  field_page_teaser:
+    weight: 26
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
+    region: content
   field_reference_access_control:
-    weight: 12
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -186,13 +210,13 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 10
+    weight: 8
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 8
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -200,21 +224,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 6
+    weight: 4
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 11
+    weight: 9
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 7
+    weight: 5
     region: content
     third_party_settings: {  }
   title:
@@ -227,7 +251,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 3
+    weight: 2
     region: content
     settings:
       match_operator: CONTAINS
@@ -236,7 +260,7 @@ content:
       match_limit: 10
     third_party_settings: {  }
   url_redirects:
-    weight: 9
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
