--- a/config/sites/default/core.entity_view_display.node.page.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.page.teaser.yml
@@ -10,10 +10,12 @@ dependencies:
     - field.field.node.page.field_basic_sidebar
     - field.field.node.page.field_body_components
     - field.field.node.page.field_metatags
+    - field.field.node.page.field_page_teaser
     - field.field.node.page.field_reference_access_control
     - field.field.node.page.field_text
     - node.type.page
   module:
+    - text
     - user
 _core:
   default_config_hash: cSv5lDnbIgDug475Hdz3woED2XMqYv3awI-J9u1JLbY
@@ -23,13 +25,17 @@ bundle: page
 mode: teaser
 content:
   content_moderation_control:
-    weight: -20
+    weight: 0
+    region: content
     settings: {  }
     third_party_settings: {  }
+  field_page_teaser:
+    type: text_default
+    weight: 1
     region: content
-  links:
-    weight: 101
-    region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   field_basic_components: true
   field_basic_enable_nav: true
@@ -40,4 +46,5 @@ hidden:
   field_metatags: true
   field_reference_access_control: true
   field_text: true
+  links: true
   search_api_excerpt: true
