--- a/config/sites/default/core.entity_view_display.node.article.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.article.teaser.yml
@@ -18,6 +18,11 @@ targetEntityType: node
 bundle: article
 mode: teaser
 content:
+  content_moderation_control:
+    weight: -20
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_article_date:
     type: datetime_default
     weight: 0
