--- a/config/sites/default/search_api.index.acquia_search_index.yml
+++ b/config/sites/default/search_api.index.acquia_search_index.yml
@@ -348,6 +348,7 @@ field_settings:
     datasource_id: 'entity:media'
     property_path: name
     type: text
+    boost: !!float 8
     dependencies:
       module:
         - media
