Refactor locations and doctors into singular migrations.

--- a/config/sites/default/migrate_plus.migration.towerhealth_doctors.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_doctors.yml
@@ -13,7 +13,7 @@ migration_tags: null
 migration_group: null
 label: 'Import tower health doctor content'
 source:
-  plugin: doctors_refactor
+  plugin: doctors
   doctors_path: 'public://directory/Find_Provider_Dir_Practitioner.txt'
   credentials_path: 'public://directory/Find_Provider_Dir_Practitioner_Credentials.txt'
   insurance_path: 'public://directory/Find_Provider_Dir_Practitioner_Insurance.txt'
@@ -25,7 +25,44 @@ source:
   locations_path: 'public://directory/Find_Provider_Dir_Practitioner_Offices.txt'
   track_changes: true
 process:
-  field_profile_practid: practioner_id
+  field_profile_practid:
+    -
+      plugin: get
+      source: practioner_id
+    -
+      plugin: skip_on_empty
+      method: row
+  field_area_interest_ref:
+    -
+      plugin: towerhealth_entity_ref_values
+      source: '@_area_of_interest'
+  _medical_specialty:
+    -
+      plugin: towerhealth_lookup_taxonomy_term
+      lookup_field: name
+      source: specialty_terms
+      vid: medical_specialty
+    -
+      plugin: skip_on_empty
+      method: process
+  field_medical_specialties_ref:
+    -
+      plugin: towerhealth_entity_ref_values
+      source: '@_medical_specialty'
+  field_profile_board_certified: board_certified
+  _hospital_aff:
+    -
+      plugin: towerhealth_lookup_taxonomy_term
+      lookup_field: field_hospital_faccode
+      source: fac_codes
+      vid: hospital_affiliation
+    -
+      plugin: skip_on_empty
+      method: process
+  field_affiliations_ref:
+    -
+      plugin: towerhealth_entity_ref_values
+      source: '@_hospital_aff'
   field_profile_first_name:
     -
       plugin: get
@@ -127,18 +164,18 @@ process:
     source: credentials
   field_profile_languages: languages
   field_profile_job_title: job_titles
-  _location_ids:
+  _locations:
     -
       plugin: towerhealth_lookup_node
       lookup_field: field_location_id
       source: location_ids
     -
       plugin: skip_on_empty
-      method: row
+      method: process
   field_location_ref:
     -
       plugin: towerhealth_entity_ref_values
-      source: '@_location_ids'
+      source: '@_locations'
   _area_of_interest:
     -
       plugin: towerhealth_lookup_taxonomy_term
@@ -147,38 +184,7 @@ process:
       vid: area_of_interest
     -
       plugin: skip_on_empty
-      method: row
-  field_area_interest_ref:
-    -
-      plugin: towerhealth_entity_ref_values
-      source: '@_area_of_interest'
-  _medical_specialty:
-    -
-      plugin: towerhealth_lookup_taxonomy_term
-      lookup_field: name
-      source: specialty_terms
-      vid: medical_specialty
-    -
-      plugin: skip_on_empty
-      method: row
-  field_medical_specialties_ref:
-    -
-      plugin: towerhealth_entity_ref_values
-      source: '@_medical_specialty'
-  field_profile_board_certified: board_certified
-  _hospital_aff:
-    -
-      plugin: towerhealth_lookup_taxonomy_term
-      lookup_field: field_hospital_faccode
-      source: fac_codes
-      vid: hospital_affiliation
-    -
-      plugin: skip_on_empty
-      method: row
-  field_affiliations_ref:
-    -
-      plugin: towerhealth_entity_ref_values
-      source: '@_hospital_aff'
+      method: process
   type:
     plugin: default_value
     default_value: profile
