--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_locations.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_locations.yml
@@ -9,9 +9,10 @@ dependencies:
 source:
   plugin: 'locations'
   # Full path to the file.
-  path: 'public://directory/Find_Provider_Dir_Offices.txt'
-  second_path: 'public://directory/Find_Provider_Dir_Practitioner_Offices.txt'
-  third_path: 'public://directory/Find_Provider_Dir_Practitioner_Office_Desig.txt'
+  offices_path: 'public://directory/Find_Provider_Dir_Offices.txt'
+  practioner_offices_path: 'public://directory/Find_Provider_Dir_Practitioner_Offices.txt'
+  office_desig_path: 'public://directory/Find_Provider_Dir_Practitioner_Office_Desig.txt'
+  office_hours_path: 'public://directory/Find_Provider_Dir_OfficeHours.txt'
   track_changes: true
 
 process:
@@ -53,6 +54,12 @@ process:
   field_location_id: location_id
 
   field_location_fax: fax_number
+
+  field_location_hours:
+    - plugin: towerhealth_office_hours
+      source: hours
+    - plugin: skip_on_empty
+      method: process
 
   type:
     plugin: default_value
