--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "drupal/core-composer-scaffold": "^8.8",
         "drupal/core-recommended": "^8.8",
         "drupal/default_content": "^1.0@alpha",
+        "drupal/delete_all": "^1.2",
         "drupal/devel": "^2.1",
         "drupal/easy_breadcrumb": "^1.12",
         "drupal/emulsify": "^3.1",
