--- a/config/sites/default/core.entity_view_display.taxonomy_term.hospital_affiliation.default.yml
+++ b/config/sites/default/core.entity_view_display.taxonomy_term.hospital_affiliation.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.taxonomy_term.hospital_affiliation.field_hospital_faccode
+    - field.field.taxonomy_term.hospital_affiliation.field_hospital_location_id
     - taxonomy.vocabulary.hospital_affiliation
   module:
     - text
@@ -21,6 +22,14 @@ content:
     third_party_settings: {  }
   field_hospital_faccode:
     weight: 1
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_hospital_location_id:
+    weight: 2
     label: above
     settings:
       link_to_entity: false
