--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_locations.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_locations.yml
@@ -55,6 +55,18 @@ process:
 
   field_location_fax: fax_number
 
+  _location_type:
+    - plugin: towerhealth_lookup_taxonomy_term
+      lookup_field: name
+      source: location_type
+      vid: location_type
+    - plugin: skip_on_empty
+      method: process
+
+  field_location_type:
+  - plugin: towerhealth_entity_ref_values
+    source: '@_location_type'
+
   field_location_hours:
     - plugin: towerhealth_office_hours
       source: hours
