Add insurance to exported doctor migration.

--- a/config/sites/default/migrate_plus.migration.towerhealth_doctors.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_doctors.yml
@@ -185,6 +185,19 @@ process:
     -
       plugin: skip_on_empty
       method: process
+  _insurance_groups:
+    -
+      plugin: towerhealth_lookup_taxonomy_term
+      lookup_field: name
+      source: insurance_groups
+      vid: insurance_groups
+    -
+      plugin: skip_on_empty
+      method: process
+  field_insurance_ref:
+    -
+      plugin: towerhealth_entity_ref_values
+      source: '@_insurance_groups'
   type:
     plugin: default_value
     default_value: profile
