--- a/config/sites/default/system.site.yml
+++ b/config/sites/default/system.site.yml
@@ -5,7 +5,7 @@ slogan: 'Advancing Health. Transforming Lives.'
 page:
   403: ''
   404: ''
-  front: /node
+  front: /home
 admin_compact_mode: false
 weight_select_max: 100
 langcode: en
