--- a/composer.json
+++ b/composer.json
@@ -77,6 +77,7 @@
         "drupal/schema_metatag": "^1.4",
         "drupal/search_api_location": "^1.0",
         "drupal/search_api_solr": "^1.1",
+        "drupal/siteimprove": "^1.1",
         "drupal/token": "^1.5",
         "drupal/twig_field_value": "^1.2",
         "drupal/twig_tweak": "^2.4",
