--- a/config/sites/default/views.view.auto_location.yml
+++ b/config/sites/default/views.view.auto_location.yml
@@ -263,6 +263,50 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: search_api_string
+        location_type_string_1:
+          id: location_type_string_1
+          table: search_api_index_acquia_search_index
+          field: location_type_string
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '!='
+          value:
+            min: ''
+            max: ''
+            value: 'independent physician office'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: search_api_string
       sorts:
         search_api_relevance:
           id: search_api_relevance
