Add image assets.

--- a/build.xml
+++ b/build.xml
@@ -247,6 +247,8 @@
   
     <!-- Target: artifact -->
     <target name="artifact" description="Build and deploy the application.">
+        <exec command="git add pattern-lab/public/images/chosen/* --force" />
+        <exec command="git commit -m 'Add image assets'" />
         <phing phingfile="build.xml" target="artifact-main" inheritAll="false">
             <property name="build.env" value="acquia" />
         </phing>
