--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,7 @@
         "drupal/geolocation": "^3.0",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/media_entity_browser": "^2.0",
+        "drupal/media_library_edit": "^1.0@alpha",
         "drupal/menu_block": "^1.5",
         "drupal/menu_breadcrumb": "^1.11",
         "drupal/menu_item_extras": "^2.8",
