--- a/config/sites/default/core.extension.yml
+++ b/config/sites/default/core.extension.yml
@@ -53,9 +53,8 @@ module:
   inline_entity_form: 0
   link: 0
   media: 0
-  media_entity_browser: 0
-  media_entity_browser_media_library: 0
   media_library: 0
+  media_library_edit: 0
   menu_block: 0
   menu_breadcrumb: 0
   menu_item_extras: 0
