--- a/config/sites/default/core.entity_form_display.node.service.default.yml
+++ b/config/sites/default/core.entity_form_display.node.service.default.yml
@@ -21,6 +21,7 @@ dependencies:
     - content_moderation
     - field_group
     - media_library
+    - media_library_edit
     - metatag
     - paragraphs
     - path
@@ -216,7 +217,9 @@ content:
     weight: 127
     settings:
       media_types: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      media_library_edit:
+        show_edit: '1'
     region: content
   field_service_core_bool:
     weight: 9
