--- a/config/sites/default/core.entity_form_display.paragraph.icon_button.default.yml
+++ b/config/sites/default/core.entity_form_display.paragraph.icon_button.default.yml
@@ -9,6 +9,7 @@ dependencies:
   module:
     - link
     - media_library
+    - media_library_edit
 id: paragraph.icon_button.default
 targetEntityType: paragraph
 bundle: icon_button
@@ -19,7 +20,9 @@ content:
     weight: 0
     settings:
       media_types: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      media_library_edit:
+        show_edit: '1'
     region: content
   field_icon_link:
     weight: 1
