--- a/config/sites/default/core.entity_form_display.paragraph.image_box_link_custom.default.yml
+++ b/config/sites/default/core.entity_form_display.paragraph.image_box_link_custom.default.yml
@@ -11,6 +11,7 @@ dependencies:
   module:
     - link
     - media_library
+    - media_library_edit
 id: paragraph.image_box_link_custom.default
 targetEntityType: paragraph
 bundle: image_box_link_custom
@@ -29,7 +30,9 @@ content:
     weight: 2
     settings:
       media_types: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      media_library_edit:
+        show_edit: '1'
     region: content
   field_box_link:
     weight: 3
