--- a/config/sites/default/core.entity_form_display.paragraph.image_teaser_banner.default.yml
+++ b/config/sites/default/core.entity_form_display.paragraph.image_teaser_banner.default.yml
@@ -12,6 +12,7 @@ dependencies:
   module:
     - link
     - media_library
+    - media_library_edit
     - text
 id: paragraph.image_teaser_banner.default
 targetEntityType: paragraph
@@ -37,7 +38,9 @@ content:
     weight: 1
     settings:
       media_types: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      media_library_edit:
+        show_edit: '1'
     region: content
   field_image_banner_links:
     weight: 3
