--- a/config/sites/default/core.entity_form_display.paragraph.care_circle_section.default.yml
+++ b/config/sites/default/core.entity_form_display.paragraph.care_circle_section.default.yml
@@ -11,6 +11,7 @@ dependencies:
   module:
     - link
     - media_library
+    - media_library_edit
 id: paragraph.care_circle_section.default
 targetEntityType: paragraph
 bundle: care_circle_section
@@ -27,7 +28,9 @@ content:
     weight: 1
     settings:
       media_types: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      media_library_edit:
+        show_edit: '1'
     region: content
   field_care_circle_section_link:
     weight: 2
