--- a/config/sites/default/core.entity_form_display.paragraph.cta_banner.default.yml
+++ b/config/sites/default/core.entity_form_display.paragraph.cta_banner.default.yml
@@ -12,6 +12,7 @@ dependencies:
   module:
     - link
     - media_library
+    - media_library_edit
 id: paragraph.cta_banner.default
 targetEntityType: paragraph
 bundle: cta_banner
@@ -22,7 +23,9 @@ content:
     weight: 0
     settings:
       media_types: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      media_library_edit:
+        show_edit: '1'
     region: content
   field_cta_banner_link:
     weight: 4
