--- a/config/sites/default/core.entity_form_display.paragraph.patient_story.default.yml
+++ b/config/sites/default/core.entity_form_display.paragraph.patient_story.default.yml
@@ -11,6 +11,7 @@ dependencies:
   module:
     - link
     - media_library
+    - media_library_edit
 id: paragraph.patient_story.default
 targetEntityType: paragraph
 bundle: patient_story
@@ -21,7 +22,9 @@ content:
     weight: 2
     settings:
       media_types: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      media_library_edit:
+        show_edit: '1'
     region: content
   field_story_image_pos:
     weight: 4
