--- a/config/sites/default/core.entity_form_display.paragraph.video_card.default.yml
+++ b/config/sites/default/core.entity_form_display.paragraph.video_card.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - paragraphs.paragraphs_type.video_card
   module:
     - media_library
+    - media_library_edit
 id: paragraph.video_card.default
 targetEntityType: paragraph
 bundle: video_card
@@ -17,7 +18,9 @@ content:
     weight: 0
     settings:
       media_types: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      media_library_edit:
+        show_edit: '1'
     region: content
 hidden:
   created: true
