adjust file download cta to include a secondary link.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/file-download-cta/file-download-cta.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/file-download-cta/file-download-cta.yml
@@ -6,3 +6,6 @@ desc: 'Community Health Needs Assessments (CHNA) are required of tax-exempt hosp
 file:
   label: 'Download the PDF'
   url: '#'
+file_2:
+  label: 'Versión en español'
+  url: '#'
